Adding static reactjs appbase

--- a/MyFirstApp/www/index.html
+++ b/MyFirstApp/www/index.html
@@ -37,7 +37,6 @@
     * Create your own at http://cspisawesome.com
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
-
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hello World</title>
 </head>
@@ -45,7 +44,10 @@
 <body>
     <div class="app" id="content">
     </div>
+    <!-- <div id="content"></div> -->
     <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/react.min.js"></script>
+    <script type="text/javascript" src="js/react-dom.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
