--- a/MyFirstApp/www/index.html
+++ b/MyFirstApp/www/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <div class="app" id="content">
+    <div id="content">
     </div>
     <!-- <div id="content"></div> -->
     <script type="text/javascript" src="cordova.js"></script>
